[package]
name = "rbnb20-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = [] }
tokio = { version = "1.35.1", features = ["full", "rt"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
rayon = "1.8.0"
ethers = "2.0.11"
tracing = "0.1.37"
tracing-test = "0.2.4"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }
chrono = "0.4.31"
rand = { version = "0.8.5", features = [] }
reqwest = { version = "0.11.23", features = ["json"] }
hex = "0.4.3"
clap = { version = "4.4.18", features = ["derive"] }
redis = "0.24.0"
